MS Rename Deputy Changed their default domain :(

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta http-equiv="refresh"
- content="0;url=https://to-do.microsoft.com/tasks/"> 
+ content="0;url=https://to-do.live.com/tasks/"> 
   </head>
 
 <body>
